# cycle-plotter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  release.yml
cycleplotter/: main.py  plotter.py
cycleplotter/entities/: cycle_duration.py
cycleplotter/infrastructure/files/: opener.py  reader.py
cycleplotter/interfaceadapters/: config.py  factory.py
cycleplotter/interfaceadapters/cli/: argparser.py
cycleplotter/interfaceadapters/cycledataparser/: __init__.py  applehealth.py  factory.py  withingshealthmate.py
cycleplotter/interfaceadapters/parser/: applehealth.py  withingshealthmate.py
cycleplotter/parser/: applehealth.py  base.py  factory.py
cycleplotter/usecases/: __init__.py  cycle_dates_to_durations.py  extract_cycle_durations.py  plotter.py
cycleplotter/usecases/cycledataparser/: base.py
cycleplotter/usecases/parser/: applehealth.py  base.py  factory.py  withingshealthmate.py
cycleplotter/usecases/plotter/: __init__.py  config.py  plot_cycle_durations.py
docs/: architecture.md  healthdatafiles.md
requirements/: dev.txt  prod.txt
scripts/: codecheck.sh  run_tests.sh
tests/: test_extract_cycle_durations.py  test_parse_apple_export.py  test_parse_export.py  test_plot.py  test_plot_cycle_durations.py
tests/fixtures/: end.xml  pregnancy.xml
tests/fixtures/apple/: beginning.xml  includes_other_data.xml  pregnancy.xml
tests/fixtures/withings/: beginning.csv  end.csv  includes_other_data.csv  pregnancy.csv
tests/interfaceadapters/cli/argparser/: test_parse_size.py
