[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cycle-plotter"
version = "0.0.1rc1"
dependencies = [
  "defusedxml",
  "matplotlib",
]
requires-python = ">=3.11"
authors = [
  {name = "Carmen Alvarez", email = "carmen@rmen.ca"},
]
description = "Command line tool to plot a graph of cycles exported from Apple Health or Withings Health Mate."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["cli", "health"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: Matplotlib",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.scripts]
cycle-plotter = "cycleplotter.main:main"

[project.urls]
Repository = "https://github.com/caarmen/cycle-plotter"
Changelog = "https://github.com/caarmen/cycle-plotter/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["cycleplotter*"]
namespaces = false